crates/panache-parser/tests/snapshots/yaml__yaml_suite_4MUZ__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4MUZ/01
input: "{\"foo\"\n: bar}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
